--- a/01-comments.html
+++ b/01-comments.html
@@ -29,11 +29,21 @@
 <script type="text/javascript">
     function displayMessage() {
         let firstname = document.getElementById("firstname").value;
+        //récupère l'id du "fisrtname"
         let lastname = document.getElementById("lastname").value;
+        // récupère l'id du "lastname"
         let fullname = firstname + " " + lastname.toUpperCase();
+        // ajoute les id "firstname" et "lastname"
         let message = "Bonjour " + fullname;
+        // écrit un message "Bonjour" puis le fullname (donc l'id "firstname" et "lastname")
 
-        alert(message)
+        alert(message);
+        // affichage final
+
+        /* 
+        Je fais un commentaire
+        sur plusieurs lignes
+        */
     }
 </script>
 </body>
