--- a/02-increment.html
+++ b/02-increment.html
@@ -28,7 +28,7 @@
 <script type="text/javascript">
     function incrementNumber() {
         let number = document.getElementById("number").value;
-
+        alert(parseInt(number) + 1)
         // CODE HERE !
     }
 </script>
