--- a/05-even-odd.html
+++ b/05-even-odd.html
@@ -37,7 +37,16 @@
     function evenOrOdd() {
         // AIDE : regarder du côté des modulos en javascript
 
-        let number = document.getElementById("number").value;
+        let number = document.getElementById("number").value; 
+
+        
+        if(parseInt(number)%2 == 0)
+    {
+        alert('Nommbre pair')
+    }
+        else {
+        alert("Nombre impair")
+    }
 
         // CODE HERE !
     }
