--- a/06-temperature.html
+++ b/06-temperature.html
@@ -34,7 +34,9 @@
     function solidOrLiquid() {
         let temperature = document.getElementById("temperature").value
 
-        if(température > MELTING_POINT) {
+        console.log("#",temperature); //repère
+
+        if(temperature > MELTING_POINT) {
             alert("C'est de l'eau liquide !");
         } else {
             alert("C'est de la glace !")
